...
        <TextView
            android:id="@+id/brandTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Luckii"
            android:textColor="@android:color/white"
            android:textSize="60sp" />
    </LinearLayout>


    <!-- BUTTON BLOCK -->
...
        app:layout_constraintTop_toBottomOf="@id/logoRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- LOGIN BUTTON -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:text="Log in"
            android:textColor="@color/white"
            android:background="@drawable/green_pill_button"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginBottom="20dp" />

        <!-- SIGN UP BUTTON -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupButton"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:text="Sign up"
            android:textColor="@color/white"
            android:background="@drawable/green_pill_button"
            android:fontFamily="@font/poppins_bold" />
...
