<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_selector"
        />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search_selector"/>

    <item
        android:icon="@drawable/myevents_selector"
        android:id="@+id/myevents"/>

    <item
        android:icon="@drawable/profile_selector"
        android:id="@+id/profile"/>
</menu>