...
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/eventList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="5dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:divider="@color/white"
...
